# classic-bindings

./: .gitignore  Cargo.toml  MIGRATIONS.md  README.md
contracts/old-bindings-tester/: Cargo.toml
contracts/old-bindings-tester/src/: contract.rs  msg.rs
contracts/reflect/: Cargo.toml  README.md
contracts/reflect/src/: contract.rs  msg.rs
contracts/stargate-tester/: Cargo.toml
contracts/stargate-tester/src/: contract.rs  msg.rs
